2013-02-21  Peter Bloomfield

	* src/main-window.c: do not leave progress bar crawling.

2013-02-21  Peter Bloomfield

	* src/balsa-index.c (balsa_index_load_mailbox_node): move
	libbalsa_mailbox_open call to balsa_window_real_open_mbnode.
	* src/balsa-index.h: drop unused argument.
	* src/main-window.c: open mailbox in a thread.

2013-02-21  Peter Bloomfield

	* src/main.c (balsa_progress_set_text): do not check for
	subthread, as balsa_window_setup_progress is thread-safe.

2013-02-20  Peter Bloomfield

	* src/main-window.c: set up progress bar in an idle callback.

2013-02-20  Peter Bloomfield

	* src/main-window.c: change button sensitivity in an idle
	callback.

2013-02-20  Peter Bloomfield

	* src/balsa-app.c (balsa_find_iter_by_data): check for
	sub-thread.

2013-02-20  Peter Bloomfield

	* src/balsa-app.c (balsa_find_url): thread-safe.

2013-02-20  Peter Bloomfield

	* libbalsa/send.c (balsa_send_message_real_idle_cb),
	(balsa_send_message_real): close outbox in an idle callback.

2013-02-20  Peter Bloomfield

	* libbalsa/libbalsa-gpgme.c (libbalsa_gpgme_init): use g_message
	instead of g_warning.

2013-02-20  Peter Bloomfield

	* configure.in: new option --enable-debug-threads.
	* libbalsa/libbalsa.h: use it to define gdk_threads_enter() to
	detect a sub-thread.

2013-02-20  Peter Bloomfield

	Build with enable-threads; check POP3 mail and send messages in
	threads.

	* libbalsa/libbalsa.c (libbalsa_lock_mailbox),
	(libbalsa_threads_init), (libbalsa_threads_has_lock): rip out
	gdk_threads-related code.
	* libbalsa/libbalsa.h: ditto.
	* src/main.c (threads_init): ditto.
	* libbalsa/imap-server.c (connection_cleanup): not ready for
	threads.
	* libbalsa/mailbox.c (libbalsa_mailbox_class_init),
	(lbm_get_index_entry), (lbm_check_idle): ditto.
	* libbalsa/mailbox_local.c (lbm_local_save_tree_idle): ditto
	* libbalsa/mailbox_pop3.c: use a thread.
	* libbalsa/mailbox_pop3.h: ditto.
	* libbalsa/send.c (lbs_process_queue), (libbalsa_process_queue):